Fixing bug when no session is present. Hide links that require an account when we aren't logged in.

--- a/nyanfaucet/web/templates/donate.html
+++ b/nyanfaucet/web/templates/donate.html
@@ -4,10 +4,9 @@
 
 {% block content %}
 
-<h1>Donating to the faucet <small>♥≈</small></h1>
-
 <div class="row">
     <div class="col-sm-11">
+        <h1>Donating to the faucet <small>♥≈</small></h1>
         <p>
             First of all, thank you so much for considering to donate to this faucet! :3<br />
             This faucet is run as a free, non-profit service by members of the Ɲyancoin community.
@@ -18,7 +17,7 @@
         <br />
         <div class="jumbotron">
             <h1>If you wish to donate</h1>
-            <p>send your Ɲyan to this address: <strong><a href="https://nyan.space/address/KFAUCETqh5jATpEtbCJeiax2cKdDnNxdpv">KFAUCETqh5jATpEtbCJeiax2cKdDnNxdpv</a></strong></p>
+            <p>send your Ɲyan to this address: <strong><a target="_blank" href="https://nyan.space/address/KFAUCETqh5jATpEtbCJeiax2cKdDnNxdpv">KFAUCETqh5jATpEtbCJeiax2cKdDnNxdpv</a></strong></p>
         </div>
         <p>
             <small>
