--- a/nyanfaucet/web/templates/navbar.html
+++ b/nyanfaucet/web/templates/navbar.html
@@ -2,9 +2,11 @@
 
 <ul class="nav navbar-nav">
     <li class="{% navactive request 'default' %}"><a href="{% url 'default'%}" data-no-instant>About</a></li>
-    <li class="{% navactive request 'play' %}"><a href="{% url 'play'%}">Play</a></li>
-    <li class="{% navactive request 'withdraw' %}"><a href="{% url 'withdraw'%}">Withdraw</a></li>
-    <li class="{% navactive request 'account' %}"><a href="{% url 'account'%}">History</a></li>
+    {% if request.session.address %}
+        <li class="{% navactive request 'play' %}"><a href="{% url 'play'%}">Play</a></li>
+        <li class="{% navactive request 'withdraw' %}"><a href="{% url 'withdraw'%}">Withdraw</a></li>
+        <li class="{% navactive request 'account' %}"><a href="{% url 'account'%}">History</a></li>
+    {% endif %}
     <li class="{% navactive request 'donate' %}"><a href="{% url 'donate'%}">Donate</a></li>
 </ul>
 
